--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
         <title>A normal html page</title> <!--The title of this page-->
         <link rel="icon" href="Img/favicon.png" type="ico.png" sizes="32x32"> <!--The favicon of this page-->
     </head>
+    <body>
+        <header>
+            <nav> <!--The nav is the element in charge of providing links to other documents.-->
+                <ul>
+                    <li><a href="index.html">Home</a></li> <!--Here is the link and the visible name-->
+                    <li><a href="html/page.html">Second Page</a></li> <!--Here is the link and the visible name-->
+                </ul>
+            </nav>
+        </header>
 
     <div class="forms-title">
         <h2>Forms</h2>
@@ -54,7 +63,7 @@
 
         <div class="img">
             <h2>Images</h2>
-            <img src="Img/Img.png" width="747px" height="449px">
+            <img src="Img/black-outline.png" width="264px" height="224px">
         </div>
 
         <div class="video">
@@ -67,7 +76,7 @@
             <audio src="Audios/Audio.mp3" controls></audio> <!--The controls command allows us to use the browser controls for photos and videos.-->
         </div>
     </body>
-    <img class="lzy image-overflow-croped lazyload--done" src="https://media.flaticon.com/dist/min/img/home-icons/popular-styles/black-outline.png" data-src="https://media.flaticon.com/dist/min/img/home-icons/popular-styles/black-outline.png" alt="style black outline" width="264" height="224" srcset="https://media.flaticon.com/dist/min/img/home-icons/popular-styles/black-outline.png 4x">
+
     <footer>
         Copyright Marc Medrano
     </footer>
