--- a/html/page.html
+++ b/html/page.html
@@ -11,8 +11,8 @@
      <meta name="robots" content="noindex"> <!--This is to prevent google from displaying your page in the search engine-->
 
     <head>
-        <h1>This is the title</h1>
-        <title>A normal html page</title> <!--The title of this page-->
+        <h1>Page 2</h1>
+        <title>Page 2</title> <!--The title of this page-->
         <link rel="icon" href="Img/favicon.png" type="ico.png" sizes="32x32"> <!--The favicon of this page-->
     </head>
     <body>
