--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <head>
         <h1>This is the title</h1>
         <title>A normal html page</title> <!--The title of this page-->
-        <link rel="icon" href="Img/favicon.png" type="ico.png" sizes="32x32"> <!--The favicon of this page-->
+        <link rel="icon" href="img/favicon.ico"> <!--The favicon of this page-->
     </head>
     <body>
         <header>
@@ -63,7 +63,7 @@
 
         <div class="img">
             <h2>Images</h2>
-            <img src="Img/black-outline.png" width="264px" height="224px">
+            <img src="img/black-outline.png" width="264px" height="224px" title="A simple title"> <!--Title is used to display text when hovering over an image.-->
         </div>
 
         <div class="video">
