--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
         <div class="img">
             <h2>Images</h2>
-            <img src="img/black-outline.png" width="264px" height="224px" title="A simple title"> <!--Title is used to display text when hovering over an image.-->
+            <img src="https://raw.githubusercontent.com/elmarcz/Basic-HTML/github-pages/Img/black-outline.png" width="264px" height="224px" title="A simple title"> <!--Title is used to display text when hovering over an image.-->
         </div>
 
         <div class="video">
