--- a/src/index.html
+++ b/src/index.html
@@ -69,6 +69,6 @@
     </body>
     <img class="lzy image-overflow-croped lazyload--done" src="https://media.flaticon.com/dist/min/img/home-icons/popular-styles/black-outline.png" data-src="https://media.flaticon.com/dist/min/img/home-icons/popular-styles/black-outline.png" alt="style black outline" width="264" height="224" srcset="https://media.flaticon.com/dist/min/img/home-icons/popular-styles/black-outline.png 4x">
     <footer>
-        Copyright Marc Medrano
+        This is the footer. Ahutor: Marc Medrano
     </footer>
 </html>
