--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <head>
         <h1>This is the title</h1>
         <title>A normal html page</title> <!--The title of this page-->
-        <link rel="icon" href="Img/favicon.png" type="ico.png" sizes="32x32"> <!--The favicon of this page-->
+        <link rel="icon" href="https://i.ibb.co/t3G77J0/favicon.png" type="ico.png" sizes="32x32"> <!--The favicon of this page-->
     </head>
 
     <div class="forms-title">
