--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,20 @@
      <meta name="robots" content="noindex"> <!--This is to prevent google from displaying your page in the search engine-->
 
     <head>
-        <h1>This is the title</h1>
+        <h1 class="Title1">This is the title</h1>
         <title>A normal html page</title> <!--The title of this page-->
-        <link rel="icon" href="Img/favicon.png" type="ico.png" sizes="32x32"> <!--The favicon of this page-->
+        <h2>This page is for learning the basic functions of html.</h2>
+        <link rel="icon" href="https://i.ibb.co/t3G77J0/favicon.png"> <!--The favicon of this page-->
     </head>
+    <body>
+        <header>
+            <nav> <!--The nav is the element in charge of providing links to other documents.-->
+                <ul>
+                    <li><a href="index.html">Home</a></li> <!--Here is the link and the visible name-->
+                    <li><a href="html/page.html">Second Page</a></li> <!--Here is the link and the visible name-->
+                </ul>
+            </nav>
+        </header>
 
     <div class="forms-title">
         <h2>Forms</h2>
@@ -32,15 +42,15 @@
         <input type="submit" value="Submit"> 
     </div>
 
-    <div class="List-title">
-        <h2>Lists</h2>
+    <div>
+        <h2 class="Title-list">Lists</h2>
             <ul>
-                <li>Arch 1</li>
-                <li>Arch 2</li>
-                <li>Arch 3</li>
-                <li>Arch 4</li>
-                <li>Arch 5</li>
-                <li>Arch 6</li>
+                <li class="Text 1">Text 1</li>
+                <li class="Text 2">Arch 2</li>
+                <li class="Text 3">Arch 3</li>
+                <li class="Text 4">Arch 4</li>
+                <li class="Text 5">Arch 5</li>
+                <li class="Text 6">Arch 6</li>
             </ul>
             <ol>
                 <li>Arch</li>
@@ -54,7 +64,7 @@
 
         <div class="img">
             <h2>Images</h2>
-            <img src="Img/Img.png" width="747px" height="449px">
+            <img src="https://raw.githubusercontent.com/elmarcz/Basic-HTML/github-pages/Img/black-outline.png" width="264px" height="224px" title="A simple title"> <!--Title is used to display text when hovering over an image.-->
         </div>
 
         <div class="video">
@@ -67,8 +77,8 @@
             <audio src="Audios/Audio.mp3" controls></audio> <!--The controls command allows us to use the browser controls for photos and videos.-->
         </div>
     </body>
-    <img class="lzy image-overflow-croped lazyload--done" src="https://media.flaticon.com/dist/min/img/home-icons/popular-styles/black-outline.png" data-src="https://media.flaticon.com/dist/min/img/home-icons/popular-styles/black-outline.png" alt="style black outline" width="264" height="224" srcset="https://media.flaticon.com/dist/min/img/home-icons/popular-styles/black-outline.png 4x">
+
     <footer>
-        This is the footer. Ahutor: Marc Medrano
+        Copyright Marc Medrano
     </footer>
 </html>
