--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,10 @@
 
      <script src="Javascript/index.js"></script> <!--Importing javascript to this page-->
      <link rel="stylesheet" href="Css/index.css"> <!--Importing css to this page-->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet"> <!-- Importing the font to my website -->
+     <link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel="stylesheet">
 
      <meta charset="utf-8"> <!--With this coding the accents will be displayed on your page.-->
      <meta name="keywords" content="Html, Tutorial"> <!--These are the tags of your page-->
@@ -26,45 +30,54 @@
             </nav>
         </header>
 
-    <div class="forms-title">
-        <h2>Forms</h2>
-    </div>
+        <div class="forms-title">
+            <h2>Forms</h2>
+        </div>
 
-    <div class="forms">    
-        <input type="text" placeholder="Write your name" required="">      
-        <input type="password" required="">            
-        <input type="email" required="">      
-        <input type="color"> 
-        <input type="range" min="1" max="5"> 
-        <input type="date"> 
-        <input type="time"> 
-        <input type="button" value="Button">
-        <input type="submit" value="Submit"> 
-    </div>
+        <div class="forms">    
+            <input type="text" placeholder="Write your name" required="">      
+            <input type="password" required="">            
+            <input type="email" required="">      
+            <input type="color"> 
+            <input type="range" min="1" max="5"> 
+            <input type="date"> 
+            <input type="time"> 
+            <input type="button" value="Button">
+            <input type="submit" value="Submit"> 
+        </div>
 
-    <div>
-        <h2 class="Title-list">Lists</h2>
-            <ul>
-                <li class="Text 1">Text 1</li>
-                <li class="Text 2">Arch 2</li>
-                <li class="Text 3">Arch 3</li>
-                <li class="Text 4">Arch 4</li>
-                <li class="Text 5">Arch 5</li>
-                <li class="Text 6">Arch 6</li>
-            </ul>
-            <ol>
-                <li>Arch</li>
-                <li>Arch</li>
-                <li>Arch</li>
-                <li>Arch</li>
-                <li>Arch</li>
-                <li>Arch</li>
-            </ol>
+        <div>
+            <h2 class="Title-list">Lists</h2>
+                <ul>
+                    <li class="Text 1">Text 1</li>
+                    <li class="Text 2">Arch 2</li>
+                    <li class="Text 3">Arch 3</li>
+                    <li class="Text 4">Arch 4</li>
+                    <li class="Text 5">Arch 5</li>
+                    <li class="Text 6">Arch 6</li>
+                </ul>
+                <ol>
+                    <li>Arch</li>
+                    <li>Arch</li>
+                    <li>Arch</li>
+                    <li>Arch</li>
+                    <li>Arch</li>
+                    <li>Arch</li>
+                </ol>
+        </div>
+
+        <div>
+            <h2 class="Title-texts">Texts</h2>
+                <b class="Text-1">bold</b>
+                <i class="Text-2">italica</i>
+                <sup class="Text-3">Superior</sup>
+                <sub class="Text-4">Inferior</sub>
+                <strong class="Text-5">Strong</strong>
         </div>
 
         <div class="img">
             <h2>Images</h2>
-            <img src="https://raw.githubusercontent.com/elmarcz/Basic-HTML/github-pages/Img/black-outline.png" width="264px" height="224px" title="A simple title"> <!--Title is used to display text when hovering over an image.-->
+                <img src="img/Cajas.png" width="411px" height="411px" title="A simple title"> <!--Title is used to display text when hovering over an image.-->
         </div>
 
         <div class="video">
@@ -79,6 +92,6 @@
     </body>
 
     <footer>
-        Copyright Marc Medrano
+        Made-it 
     </footer>
 </html>
