--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1 class="Title1">This is the title</h1>
         <title>A normal html page</title> <!--The title of this page-->
         <h2>This page is for learning the basic functions of html.</h2>
-        <link rel="icon" href="https://i.ibb.co/t3G77J0/favicon.png"> <!--The favicon of this page-->
+        <link rel="icon" href="https://github.com/elmarcz/Basic-HTML/blob/main/src/Img/favicon.ico"> <!--The favicon of this page-->
     </head>
     <body>
         <header>
