--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
         <div class="img">
             <h2>Images</h2>
-                <img src="img/Cajas.png" width="411px" height="411px" title="A simple title"> <!--Title is used to display text when hovering over an image.-->
+                <img src="https://raw.githubusercontent.com/elmarcz/Basic-HTML/github-pages/Img/Cajas.png" width="411px" height="411px" title="A simple title"> <!--Title is used to display text when hovering over an image.-->
         </div>
 
         <div class="video">
