--- a/src/Html/page.html
+++ b/src/Html/page.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <link rel="stylesheet" href="a.css">
+    <link rel="stylesheet" href="../Css/stylesheet.css">
     <head>
         <meta charset="utf-8">
         <title>Learning CSS</title>
