--- a/html/page.html
+++ b/html/page.html
@@ -1,83 +1,58 @@
 <!DOCTYPE html>
 <html>
-
-     <script src="Javascript/index.js"></script> <!--Importing javascript to this page-->
-     <link rel="stylesheet" href="Css/index.css"> <!--Importing css to this page-->
-
-     <meta charset="utf-8"> <!--With this coding the accents will be displayed on your page.-->
-     <meta name="keywords" content="Html, Tutorial"> <!--These are the tags of your page-->
-     <meta name="description" content="This page is for learning the basic functions of html."> <!--Here is the description of the page-->
-     <meta name="ahutor" content="Marc Medrano"> <!--Here is the author of the page-->
-     <meta name="robots" content="noindex"> <!--This is to prevent google from displaying your page in the search engine-->
-
+    <link rel="stylesheet" href="../Css/stylesheet.css">
     <head>
-        <h1>Page 2</h1>
-        <title>Page 2</title> <!--The title of this page-->
-        <link rel="icon" href="Img/favicon.png" type="ico.png" sizes="32x32"> <!--The favicon of this page-->
+        <meta charset="utf-8">
+        <title>Learning CSS</title>
     </head>
-    <body>
-        <header>
-            <nav> <!--The nav is the element in charge of providing links to other documents.-->
-                <ul>
-                    <li><a href="index.html">Home</a></li> <!--Here is the link and the visible name-->
-                    <li><a href="html/page.html">Second Page</a></li> <!--Here is the link and the visible name-->
-                </ul>
-            </nav>
-        </header>
+    <body> 
+        <div id="container">
+            <header>
+                <h2 class="header">Header</h2>
+            </header>
 
-    <div class="forms-title">
-        <h2>Forms</h2>
-    </div>
+            <div class="clearfix"></div>
 
-    <div class="forms">    
-        <input type="text" placeholder="Write your name" required="">      
-        <input type="password" required="">            
-        <input type="email" required="">      
-        <input type="color"> 
-        <input type="range" min="1" max="5"> 
-        <input type="date"> 
-        <input type="time"> 
-        <input type="button" value="Button">
-        <input type="submit" value="Submit"> 
-    </div>
+            <section id="content">
+                <article class="article">
+                    <h2>Contenido</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea consectetur, unde pariatur cumque quisquam delectus error excepturi facilis illum id nesciunt odio nemo ut, dolores suscipit culpa quidem temporibus esse!
+                        Laudantium harum officia illo, quia necessitatibus, aut ratione modi placeat eum et, minus dolore assumenda beatae in dicta vel voluptatum consectetur! Fuga inventore repellendus quaerat error cum illum earum amet!
+                        Enim, laboriosam quo delectus repellat eligendi quis dolorum, cumque voluptatibus excepturi odio fugiat vitae blanditiis consectetur praesentium repudiandae laudantium non quasi obcaecati corrupti omnis molestias veniam? Doloremque ullam voluptates doloribus?
+                        Ratione nostrum sunt, iste placeat, delectus itaque error veritatis, enim ad adipisci incidunt labore excepturi quod hic eum qui corrupti doloribus officia in dicta! Unde optio ea repellat odio assumenda?
+                        Magnam vel modi voluptatum ducimus voluptatibus consectetur temporibus inventore id dicta commodi. Reprehenderit eum sequi dolores, in aut repellat repudiandae. Aliquam quaerat, accusamus dignissimos asperiores totam officia! Beatae, fugit architecto.
+                        <br><br>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores quibusdam asperiores suscipit. Neque voluptatum inventore eaque, aut perferendis veniam laborum dolorum culpa reiciendis voluptatibus sint possimus hic delectus ad ab?
+                        Consequatur fugit exercitationem modi nemo eos dolor cumque in, dolorum, necessitatibus quasi et itaque repellat quidem commodi eligendi. At exercitationem voluptate assumenda pariatur voluptatibus dolorem! Eum similique iste vel nobis!
+                        In nihil quia mollitia velit eum labore sapiente repellat aspernatur officia adipisci nisi ullam, quo, quam debitis! Possimus error praesentium sit temporibus iusto, voluptate commodi incidunt. Laborum reiciendis fugit minima.
+                        Sapiente debitis odit molestias voluptatum at corporis iste aperiam quisquam iure id praesentium cum, quod facilis iusto, explicabo sint quasi minus! Temporibus eius voluptatibus harum dolores reprehenderit voluptate nobis enim.
+                        Odio aliquid libero cupiditate quisquam voluptatibus corrupti, veniam ipsa quae, repudiandae commodi esse dicta, nesciunt iste! Esse, nostrum? Reiciendis id incidunt laborum totam natus tempore debitis ipsum, vel quam magnam.
+                        <br><br>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, reiciendis illo ratione quidem repellendus tenetur corrupti incidunt dolorum ab consequatur totam nemo ex, modi rerum. Expedita, quo doloribus. Laudantium, minus.
+                        Impedit numquam quas officiis voluptatem assumenda nam, adipisci quae omnis ratione neque qui obcaecati, laboriosam vero placeat voluptates dolore repellendus. Sint dolore facilis voluptates ad rerum deleniti inventore quibusdam laboriosam!
+                        Reprehenderit ab praesentium inventore esse repudiandae quod architecto hic consequatur, perferendis alias non magnam, porro ipsam obcaecati, vero aliquam cum et accusamus officia possimus at nostrum consectetur sint saepe! Quod!
+                        Odio ipsam fugiat expedita, deleniti aspernatur perferendis ad necessitatibus quas! Veniam obcaecati reiciendis numquam nobis, rerum tenetur eos recusandae vel quisquam, vitae asperiores maxime. Id a quas consequuntur corrupti maxime!
+                        Consectetur doloremque earum, unde excepturi aperiam suscipit ab cum magni, ratione pariatur adipisci iure! Fuga aspernatur veniam molestias assumenda quia quos atque, quidem doloribus in omnis impedit asperiores, architecto aliquid?</p>
+                </article>
+            </section>
 
-    <div class="List-title">
-        <h2>Lists</h2>
-            <ul>
-                <li>Arch 1</li>
-                <li>Arch 2</li>
-                <li>Arch 3</li>
-                <li>Arch 4</li>
-                <li>Arch 5</li>
-                <li>Arch 6</li>
-            </ul>
-            <ol>
-                <li>Arch</li>
-                <li>Arch</li>
-                <li>Arch</li>
-                <li>Arch</li>
-                <li>Arch</li>
-                <li>Arch</li>
-            </ol>
-        </div>
+            <aside class="barralateral">
+                <h3>Sidebar</h3>
+            </aside>
 
-        <div class="img">
-            <h2>Images</h2>
-            <img src="Img/black-outline.png" width="264px" height="224px">
-        </div>
+            <div class="clearfix"></div>
 
-        <div class="video">
-            <h2>Videos</h2>
-            <video src="Videos/Video.mp4" controls></video> <!--The controls command allows us to use the browser controls for photos and videos.-->
-        </div>
-        
-        <div class="audio">
-            <h2>Audios</h2>
-            <audio src="Audios/Audio.mp3" controls></audio> <!--The controls command allows us to use the browser controls for photos and videos.-->
+            <div class="widget1">
+                <h3>Widget</h3>
+            </div>
+            <div class="widget2">
+                <h3>Widget</h3>
+            </div> 
+
+            <div class="clearfix"></div>
+
+            <footer>Made it by Marc Medrano</footer>
         </div>
     </body>
-
-    <footer>
-        Copyright Marc Medrano
-    </footer>
 </html>
+
