--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li> <!--Here is the link and the visible name-->
                     <li><a href="html/page.html">Second Page</a></li> <!--Here is the link and the visible name-->
+                     <li><a href="html/Cards/Cards.html">Third Page</a></li> <!--Here is the link and the visible name-->
                 </ul>
             </nav>
         </header>
