--- a/html/page.html
+++ b/html/page.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <link rel="stylesheet" href="../Css/stylesheet.css">
+    <link rel="icon" href="https://github.com/elmarcz/Basic-HTML/blob/main/src/Img/favicon.ico">
     <head>
         <meta charset="utf-8">
         <title>Learning CSS</title>
