--- a/html/Cards/Cards.html
+++ b/html/Cards/Cards.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <link rel="stylesheet" href="../../Css/Cards.css">
-    <link rel="icon" type="image/png" href="../../img/favicon.ico" sizes="32x32"> <!--The favicon of this page-->
+     <link rel="icon" href="https://github.com/elmarcz/Basic-HTML/blob/main/src/Img/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
