--- a/html/Cards/Cards.html
+++ b/html/Cards/Cards.html
@@ -43,6 +43,6 @@
             </div>
         </body>
     </div>
-        <footer>Web made-it by Marc Medrano</footer>
+        <footer>Web made it by Marc Medrano</footer>
     
 </html>
