--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li> <!--Here is the link and the visible name-->
                     <li><a href="html/page.html">Second Page</a></li> <!--Here is the link and the visible name-->
+                     <li><a href="https://github.com/elmarcz/frontend/blob/github-pages/html/Cards/Cards.html">Third Page</a></li>
                 </ul>
             </nav>
         </header>
